Moved component stylings to correct place

--- a/Angular-Web-Expert/src/app/app.component.html
+++ b/Angular-Web-Expert/src/app/app.component.html
@@ -15,8 +15,6 @@
   </head>
   <body>
     <main>
-
-
       <div class="wrapper">
       <section>
         <h1>Quam Tristique Condimentum</h1>
@@ -38,12 +36,12 @@
               lacinia bibendum nulla sed.
             </p>
 
-            <ul>
+            <ul class="list-container">
               <li>Tellus Ullamcorper Inceptos</li>
               <li>Magna Condimentum
-                <ul class="second">
-                  <li>Mattis Tristique</li>
-                  <li>Pharetra Pellentesque Dapibus</li>
+                <ul >
+                  <li class="second">Mattis Tristique</li>
+                  <li class="second">Pharetra Pellentesque Dapibus</li>
                 </ul>
               </li>
               <li>Aenean Inceptos</li>
