--- a/Angular-Web-Expert/src/app/compensation-calculator/compensation-calculator.component.html
+++ b/Angular-Web-Expert/src/app/compensation-calculator/compensation-calculator.component.html
@@ -1,53 +1,84 @@
 <aside>
-    <div class="compensation-calculator">
-      <h4>
-        Compensation<br />
-        Calculator
-      </h4>
+  <div class="compensation-calculator">
+    <h4>
+      Compensation<br />
+      Calculator
+    </h4>
 
-      <form action="" >
-        <label for="income">Average income</label>
-       <span class="income"> 
-
-         <input type="number" name="income" min="0" [(ngModel)]="income">
-
+    <form action="">
+      <label for="income">Average income</label>
+      <span class="income">
+        <input type="number" name="income" min="0" [(ngModel)]="income" />
       </span>
-        <label for="sickleavedays">Days on sick-leave:</label>
-        <span class="sickleavedays"> 
-          
-          
-          <input type="number" name="daysOnSickLeave" max="240" id="" min="0" [(ngModel)]="daysOnSickLeave"></span>
-        
-        <input type="checkbox" name="hasTubercolosis" id="hasTubercolosis" [(ngModel)]="hasTubercolosis"/>
+      <label for="sickleavedays">Days on sick-leave:</label>
+      <span class="sickleavedays">
+        <input
+          type="number"
+          name="daysOnSickLeave"
+          max="240"
+          id=""
+          min="0"
+          [(ngModel)]="daysOnSickLeave"
+      /></span>
 
+      <input
+        type="checkbox"
+        name="hasTubercolosis"
+        id="hasTubercolosis"
+        [(ngModel)]="hasTubercolosis"
+      />
 
-        <label class="checkbox" for="hasTubercolosis"
-          >I have tubercolosis</label>
+      <label class="checkbox" for="hasTubercolosis">I have tubercolosis</label>
 
-        <button class="calculate" (click)="onCalculateCompensation()">Calculate</button >
+      <button class="calculate" (click)="onCalculateCompensation()">
+        Calculate
+      </button>
 
-        <hr />
+      <hr />
 
-        <div class="compensations">
-          <div class="employer-compensates">
-            <span>
-              <p>The employer compensates<br><strong>{{ employerCompensatesDays }} days</strong></p><br>
-                 <p><strong>{{ employerCompensatesAmount }}</strong></p>
-              <p><span class="daily-allowance">Daily allowance<br> 28,00 €</span></p>
-            </span>
-          </div>
-
-          <div class="health-insurance-compensates">
-            <p>Health Insurance compensates <strong><br>{{ healthInsuranceCompensatesDays }} days</strong></p><br>
-            <p><strong>{{ healthInsuranceCompensatesAmount }}</strong></p>
-            <p><span class="daily-allowance">Daily allowance <br>28,00 €</span></p>
-          </div>
+      <div class="compensations">
+        <div class="employer-compensates">
+          <span>
+            <p>
+              The employer compensates<br /><strong
+                >{{ employerCompensatesDays }} days</strong
+              >
+            </p>
+            <br />
+            <p>
+              <strong>{{ employerCompensatesAmount }}</strong>
+            </p>
+            <p>
+              <span class="daily-allowance"
+                >Daily allowance<br />
+                28,00 €</span
+              >
+            </p>
+          </span>
         </div>
-        <hr />
-        <span class="compensation-total">
-        <p>Compensation total for 7 days (net)</p><br>
-        <strong class="net"><p>{{compensationTotal}}</p></strong>
-     </span>
-      </form>
-    </div>
-  </aside>
+
+        <div class="health-insurance-compensates">
+          <p>
+            Health Insurance compensates
+            <strong><br />{{ healthInsuranceCompensatesDays }} days</strong>
+          </p>
+          <br />
+          <p>
+            <strong>{{ healthInsuranceCompensatesAmount }}</strong>
+          </p>
+          <p>
+            <span class="daily-allowance">Daily allowance <br />28,00 €</span>
+          </p>
+        </div>
+      </div>
+      <hr/>
+      <span class="compensation-total">
+        <p>Compensation total for {{ totalDaysCompensated }} days (net)</p>
+        <br />
+        <strong class="net"
+          ><p>{{ compensationTotal }} €</p></strong
+        >
+      </span>
+    </form>
+  </div>
+</aside>
